# rsLogo

./: .gitignore  Cargo.toml  LICENSE  README.md  mark_request.txt  topic.md
logo_examples/: 0_01_comments_only.lg  1_00_penup_pendown.lg  1_01_setpencolor.lg  1_02_forward_back.lg  1_03_left_right.lg  1_04_turn_rel.lg  1_05_setheading_abs.lg  1_06_setx_sety.lg  1_07_combo.lg  1_08_harder_combo.lg  1_09_too_many_args_err.lg  1_10_too_many_args_2_err.lg  1_11_wrong_type_err.lg  1_12_not_enough_args_err.lg  1_13_wrong_type_err.lg  2_00_penup_pendown_vars.lg  2_01_setpencolor_vars.lg  2_02_moving_vars.lg  2_03_missing_var_err.lg  2_04_queries.lg  2_05_addassign.lg  2_06_unknownaddassign_err.lg  3_00_simple_if.lg  3_01_double_if.lg  3_02_nested_if.lg  3_03_single_loop.lg  3_04_zero_loop.lg  3_05_spiral.lg  3_06_spiral2.lg  3_07_invalid_if_err.lg  3_08_invalid_while_err.lg  3_09_nested_while_loop.lg  4_00_basic_arithmetic.lg  4_01_basic_arithmetic_neg.lg  4_02_logical_and.lg  4_03_logical_or.lg  4_04_nested_if.lg  4_05_mixed_logic.lg  4_06_mixed_logic_2.lg  4_07_complex_1.lg  (+10 more)
src/: draw.rs  main.rs
src/ast/: Cargo.toml  assign.rs  decl.rs  err.rs  expr.rs  lib.rs  mod.rs  stmt.rs  structs.rs
src/ast/src/: assign.rs  decl.rs  err.rs  (+5 more)
src/generation/: Cargo.toml  expr.rs  lib.rs  mod.rs  stmt.rs  variable.rs
src/transpiler/: expr.rs  file.rs  func.rs  lib.rs  mod.rs  stmt.rs
template/: draw.rs.template
template/draw_impl/: color.template  direction.template  new.template  pen_move.template  set_pen_color.template  set_x.template  turn.template  x.template  y.template
(+21 files in other folders)
