workspace = { members = [ "src/ast", "src/generation", "src/transpiler" ] }
[package]
name = "rslogo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "src/ast" }
generation = { path = "src/generation" }
unsvg = "1.1.1"
clap = { version = "4.4.4", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }

